fixed wrap for aho

--- a/css/forgotten_overlay.css
+++ b/css/forgotten_overlay.css
@@ -16,6 +16,7 @@ body {
 
 .wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
